--- a/Sea of Steel/Sea Of Steel/Sea Of Steel.csproj
+++ b/Sea of Steel/Sea Of Steel/Sea Of Steel.csproj
@@ -63,4 +63,16 @@
 		<PackageReference Include="Plugin.Maui.Audio" Version="3.1.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="Pages\RecherchePartiePage.xaml.cs">
+	    <DependentUpon>RecherchePartiePage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\RecherchePartiePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
