--- a/Sea of Steel/Sea Of Steel/Sea Of Steel.csproj
+++ b/Sea of Steel/Sea Of Steel/Sea Of Steel.csproj
@@ -61,15 +61,22 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 		<PackageReference Include="Plugin.Maui.Audio" Version="3.1.1" />
+		<PackageReference Include="Plugin.BLE" Version="2.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\NomHotePage.xaml.cs">
+	    <DependentUpon>NomHotePage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\RecherchePartiePage.xaml.cs">
 	    <DependentUpon>RecherchePartiePage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\NomHotePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RecherchePartiePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
