--- a/Sea of Steel/Sea Of Steel/Sea Of Steel.csproj
+++ b/Sea of Steel/Sea Of Steel/Sea Of Steel.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net8.0-android</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
@@ -65,6 +65,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\WikiPage.xaml.cs">
+	    <DependentUpon>WikiPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\NomHotePage.xaml.cs">
 	    <DependentUpon>NomHotePage.xaml</DependentUpon>
 	  </Compile>
@@ -74,6 +77,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\WikiPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\NomHotePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
