--- a/Sea of Steel/Sea Of Steel/Platforms/Android/AndroidManifest.xml
+++ b/Sea of Steel/Sea Of Steel/Platforms/Android/AndroidManifest.xml
@@ -9,4 +9,5 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 	<uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
